objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_Mathematics_Program_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether Advanced Placement (AP) mathematics courses are offered in the school.</description>
        <label>AP Mathematics Program Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AP_Other_Program_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether Advanced Placement (AP) courses in subjects other than mathematics and science are offered in the school.</description>
        <label>AP Other Program Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AP_Science_Program_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether Advanced Placement (AP) science courses are offered in the school.</description>
        <label>AP Science Program Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AYP_Status_2008__c</fullName>
        <label>AYP Status 2008</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restructuring 1</fullName>
                </value>
                <value>
                    <fullName>Restructuring 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AYP_Status_2009__c</fullName>
        <label>AYP Status 2009</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restructuring 1</fullName>
                </value>
                <value>
                    <fullName>Restructuring 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AYP_Status_Change__c</fullName>
        <label>AYP Status Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status - 1</fullName>
                </value>
                <value>
                    <fullName>Status - 2</fullName>
                </value>
                <value>
                    <fullName>Status - 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>School Abbreviation</description>
        <label>Abbreviation</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Goal__c</fullName>
        <description>This value is set at the &quot;school&quot; level.</description>
        <label>Academic Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative_Funding_Control__c</fullName>
        <description>The type of educational institution as classified by its funding source</description>
        <label>Administrative Funding Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private School</fullName>
                </value>
                <value>
                    <fullName>Public School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Afterschool_Curriculum_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The pilot will focus on testing elementary and middle school after-school enrichment curricula in content areas that are currently underrepresented on the curriculum menu: the arts and physical activity</description>
        <label>Afterschool Curriculum Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Reporting_Method__c</fullName>
        <description>The method that the instructor of the class uses to report the performance and achievement of all students. It may be a qualitative method such as individualized teacher comments or a quantitative method such as a letter or a numerical grade. In some cases, more than one type of reporting method may be used.</description>
        <label>Assessment Reporting Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter Grade/Mark</fullName>
                </value>
                <value>
                    <fullName>Age Score</fullName>
                </value>
                <value>
                    <fullName>C-Scaled Scores</fullName>
                </value>
                <value>
                    <fullName>Grade Equivalent or Grade-Level Indicator</fullName>
                </value>
                <value>
                    <fullName>ACT Score</fullName>
                </value>
                <value>
                    <fullName>Normal Curve Equivalent  Normalized Standard Score</fullName>
                </value>
                <value>
                    <fullName>Number Score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistant_Principal_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant Principal 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Assistant Principal 1)</relationshipLabel>
        <relationshipName>Asst_Principal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Principal_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant Principal 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Assistant Principal 2)</relationshipLabel>
        <relationshipName>Asst_Principal2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Principal_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant Principal 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Assistant Principal 3)</relationshipLabel>
        <relationshipName>Asst_Principal3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Goal__c</fullName>
        <label>Attendance Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_of_Grouping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether the school has students in this school who are ability grouped for classroom instruction in mathematics or English/reading/language arts.</description>
        <label>Availability of Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Goal__c</fullName>
        <label>Behavior Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Allocation_2008__c</fullName>
        <label>Budget Allocation 2008</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Allocation_2009__c</fullName>
        <label>Budget Allocation 2009</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Census_Tract_Number__c</fullName>
        <description>The census tract number of the school site.</description>
        <label>Census Tract Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Determination_Date__c</fullName>
        <description>The month, day, and year that the school, building, site, system, component, equipment, or fixture compliance status was determined</description>
        <label>Compliance Determination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Name__c</fullName>
        <description>The name of the inspection or process that indicates conformity to the requirements or standards specified in federal, state, or local standards or codes.</description>
        <label>Compliance Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Compliance</fullName>
                </value>
                <value>
                    <fullName>Not in Compliance</fullName>
                </value>
                <value>
                    <fullName>Planned Compliance</fullName>
                </value>
                <value>
                    <fullName>Waived Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distinguished_School_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether the school has been identified as distinguished based on the state accountability requirements.</description>
        <label>Distinguished School Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_School_ID__c</fullName>
        <label>District School ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This pilot will focus on integrating attendance skill building programming within an existing service (SEL coaching, after-school, school events, etc). With insights gained from FY18 discovery work; our goal is to find opportunities for students to build skills that impact attendance in elementary school and support their transition from elementary school to middle school.</description>
        <label>ES Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ES_Leveled_Literacy_Intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pilot Leveled Literacy Intervention (LLI) in ES as the sole Tier 2 intervention program to target foundational literacy skills in order to help students read on grade level.</description>
        <label>ES Leveled Literacy Intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Capacity__c</fullName>
        <label>Facility Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HMH_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMH School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Inside_the_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pilot Inside the Text (ITT) curriculum in HS as the sole Tier 2 intervention program to target foundational literacy skills in order to help students read and participate in all grade level content.</description>
        <label>HS Inside the Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Transition_to_Algebra__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Research-based mathematics support curriculum that is meant to run concurrently with an Algebra 1 course in the 9th grade space. It is meant to raise the competence and confidence of students who may benefit from supports for algebra success</description>
        <label>HS Transition to Algebra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IB_Program_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to imply that a school offers an IB program</description>
        <label>IB Program Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Study_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Study School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructional_Superintendent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructional Superintendent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Academic_Curriculum_DTM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pilot Do the Math Now! (DTMN!) in MS as the sole Tier 2 math intervention program to target foundational math skills in order to help prepare students to be algebra-ready.</description>
        <label>MS Academic Curriculum (DTM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_Academic_Curriculum_LLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pilot Leveled Literacy Intervention (LLI) curriculum in MS as the sole Tier 2 intervention program to target foundational literacy skills in order to help students read on grade level.</description>
        <label>MS Academic Curriculum (LLI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets__c</fullName>
        <inlineHelpText>Assigned Regional Market</inlineHelpText>
        <label>Markets</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Math_Proficiency_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication of whether the district met the math proficiency target in accordance with state definition. This data group is submitted at the following levels: &quot;LEA&quot; School</description>
        <label>Math Proficiency Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_County__c</fullName>
        <description>The name of the county, parish, borough, or comparable unit (within a state) in which an address is located.</description>
        <label>Name of County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partnership_Year__c</fullName>
        <label>Partnership Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_E_mail_Address__c</fullName>
        <label>Principal E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Principal)</relationshipLabel>
        <relationshipName>Principal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Capacity__c</fullName>
        <label>Room Capacity</label>
        <summarizedField>Room__c.Size__c</summarizedField>
        <summaryForeignKey>Room__c.School__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Room_Count__c</fullName>
        <label>Room Count</label>
        <summaryForeignKey>Room__c.School__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDS_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Buildings__c</fullName>
        <label>School Buildings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Code__c</fullName>
        <label>School Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_District_Subdivision__c</fullName>
        <description>The number, letter, or name that describes an organizational subdivision of a school district.</description>
        <label>School District Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <label>School District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Full_Name__c</fullName>
        <description>The full name of the school</description>
        <label>School Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Partnership_Business_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Participating sites will utilize the draft school partnership business process to confirm, manage, and improve school partnerships. Foundational principles of the business process include frequent communication, shared goals, reflection and strategic action planning.</description>
        <label>School Partnership Business Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Picture__c</fullName>
        <label>School Picture</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>School_Programs__c</fullName>
        <label>School Programs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Subtype__c</fullName>
        <label>School Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Ward__c</fullName>
        <label>School Ward</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baton Rouge</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>City Year</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Little Rock</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Memphis</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Milwaukee</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Orleans</fullName>
                </value>
                <value>
                    <fullName>New York City</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Providence</fullName>
                </value>
                <value>
                    <fullName>Rhode Island</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Jose/Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Seattle/King County</fullName>
                </value>
                <value>
                    <fullName>Tulsa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Assigned_Code_for_Institution__c</fullName>
        <description>A unique number or alphanumeric code assigned by the state for the institution.</description>
        <label>State Assigned Code for Institution</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_FIPS_Code__c</fullName>
        <description>The Federal Information Processing Standards (FIPS) numeric code for the state.</description>
        <label>State FIPS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - AL</fullName>
                </value>
                <value>
                    <fullName>02 - AK</fullName>
                </value>
                <value>
                    <fullName>04 - AZ</fullName>
                </value>
                <value>
                    <fullName>05 - AR</fullName>
                </value>
                <value>
                    <fullName>06 - CA</fullName>
                </value>
                <value>
                    <fullName>08 - CO</fullName>
                </value>
                <value>
                    <fullName>09 - CT</fullName>
                </value>
                <value>
                    <fullName>10 - DE</fullName>
                </value>
                <value>
                    <fullName>11 - DC</fullName>
                </value>
                <value>
                    <fullName>12 - FL</fullName>
                </value>
                <value>
                    <fullName>13 - GA</fullName>
                </value>
                <value>
                    <fullName>15 - HI</fullName>
                </value>
                <value>
                    <fullName>16 - ID</fullName>
                </value>
                <value>
                    <fullName>17 - IL</fullName>
                </value>
                <value>
                    <fullName>18 - IN</fullName>
                </value>
                <value>
                    <fullName>19 - IA</fullName>
                </value>
                <value>
                    <fullName>20 - KS</fullName>
                </value>
                <value>
                    <fullName>21 - KY</fullName>
                </value>
                <value>
                    <fullName>22 - LA</fullName>
                </value>
                <value>
                    <fullName>23 - ME</fullName>
                </value>
                <value>
                    <fullName>24 - MD</fullName>
                </value>
                <value>
                    <fullName>25 - MA</fullName>
                </value>
                <value>
                    <fullName>26 - MI</fullName>
                </value>
                <value>
                    <fullName>27 - MN</fullName>
                </value>
                <value>
                    <fullName>28 - MS</fullName>
                </value>
                <value>
                    <fullName>29 - MO</fullName>
                </value>
                <value>
                    <fullName>30 - MT</fullName>
                </value>
                <value>
                    <fullName>31 - NE</fullName>
                </value>
                <value>
                    <fullName>32 - NV</fullName>
                </value>
                <value>
                    <fullName>33 - NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplemental_Services_Provided__c</fullName>
        <label>Supplemental Services Provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Required to Provide Supplemental Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_1_Targeted_School_Status__c</fullName>
        <label>Title 1 Targeted School Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Title I Targeted Eligible School - No Program</fullName>
                </value>
                <value>
                    <fullName>Title I Targeted School</fullName>
                </value>
                <value>
                    <fullName>Title I School Wide Eligible - Title I targeted program</fullName>
                </value>
                <value>
                    <fullName>Title I School Wide Eligible School - No Program</fullName>
                </value>
                <value>
                    <fullName>Title I School Wide School</fullName>
                </value>
                <value>
                    <fullName>Not a Title I school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_School__c</fullName>
        <label>Type of School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>K-8 School</fullName>
                </value>
                <value>
                    <fullName>K-12 School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whole_School_Culture_Climate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Using a framework created in FY18 for Culture &amp; Climate strategies, teams will test out how these strategies (including our High Leverage Strategies) impact whole school culture &amp; climate as measured by our culture &amp; climate metrics (including teacher perception).</description>
        <label>Whole School Culture &amp; Climate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whole_School_Data_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This pilot will focus on the analysis portion of whole school data usage, using cross indicator data, as well as the school partnership process in arriving at shared goals (work based on analysis is specific to CY team and not studied under pilot).</description>
        <label>Whole School Data Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legacy_key1__c</fullName>
        <label>legacy key1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Enrolled_Students__c</fullName>
        <label># of Enrolled Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Faculty__c</fullName>
        <label># of Faculty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Site__c</columns>
        <columns>Account_18_digit_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <role>Admin</role>
            <role>CY_HQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Location_Schools</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Site__c</columns>
        <columns>legacy_key1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Location Schools</label>
        <sharedTo>
            <role>Admin</role>
            <role>CY_HQ</role>
        </sharedTo>
    </listViews>
</CustomObject>